# discac

./: .gitignore  Cargo.toml  README.md  build.sh  publish-x86-64-Linux.sh  publish.sh  rust-toolchain  temp.config.json
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  lint.yml  release.yml  rust.yml
scripts/: build.sh  pack.sh  publish-older-glibc.sh  publish-x86-64-Linux.sh  publish.sh  run-clippy.sh
src/: main.rs
systemd/: discac.service  discac.timer  discac@.service
